# quickstart-package

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/quickstart_package/: __init__.py
tests/: test_main.py
